# lperft

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: lib.rs  main.rs  perft_h_m.rs  perft_h_s.rs  perft_ht_mt.rs  perft_ht_st.rs  perft_mt.rs  perft_n_m.rs  perft_n_s.rs  perft_st.rs  table_m.rs  table_mt.rs  table_s.rs  table_st.rs
